--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "hc-theme",
   "private": true,
   "dependencies": {
-    "bi-app-sass": "^1.1.0"
+    "bi-app-sass": "^1.1.0",
+    "parallax-js": "^3.1.0"
   },
   "devDependencies": {
     "browser-sync": "^2.26.12",
